test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/sizeof_void.plx
pub fn main(none) i32 {
    return sizeof<none> #  can only apply sizeof to complete types
}
